// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export-star.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export * from "mod";


=====================================output=====================================
export * from "mod";

================================================================================
`;

exports[`export-star-as.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export * as ns from "mod";


=====================================output=====================================
export * as ns from "mod";

================================================================================
`;
